<resources>
    <string name="app_name">CYMDroid</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="addresse_connexion">Adresse électronique</string>
    <string name="addresse_connexion_helper">xxxx@mail.com</string>
    <string name="addresse_connexion_error">Adresse électronique incorrecte</string>

    <string name="mdp_connexion">Mot de passe</string>
    <string name="mdp_connexion_helper">**********</string>
    <string name="mdp_connexion_error">Mot de passe incorrect</string>
    <string name="message_erreur_encodage">"Erreur lors de l'encodage de la requête"</string>

    <string name="bouton_connexion">Se connecter</string>

    <string name="visualisation_humeur">Visualisater les humeurs</string>
    <string name="ajouter_humeur">Ajouter une humeur</string>

    <string name="label_humeur">Humeur :</string>
    <string name="label_date">Date et heure :</string>
    <string name="label_info">Informations :</string>
    <string name="label_info_helper">Vous pouvez saisir des informations complémentaires ici</string>
    <string name="label_annuler">Annuler</string>
    <string name="label_valider">Valider</string>
    <string name="date_helper">25/12/2022</string>
    <string name="heure_helper">12:25</string>
</resources>